adds more report to the report

--- a/Relatório/Falhas.tex
+++ b/Relatório/Falhas.tex
@@ -1,1 +1,9 @@
 \chapter{Tolerância a Falhas}
+
+Com esta arquitetura podemos ter cenários em que o servidor central possa falhar e as trocas de mensagens entre regiões não aconteça, mas que dentro de cada região continue a funcionar. Mesmo se o servidor central voltar a conectar-se, não irá realizar uma nova conexão aos servidores regionais já existentes, estes funcionarão independentemente da nova instância do servidor central. O problema causado por isso é não permitir interação entre regiões. Estes servidores regionais ficarão com uma instância de um servidor central que já não está conectado. Achámos esta solução mais adequada, pois permite a troca de mensagens entre utilizadores dentro da mesma região. Uma outra solução passaria por desconectar todos os servidores regionais e instanciá-los novamente após o servidor central ser instanciado. Esta solução implicaria perder todos os dados de utilizadores e de grupos já registados nos servidores regionais.\\
+
+Podemos assumir outro cenário que seria um servidor regional a falhar. Neste caso só a região desse servidor é que não conseguiria trocar mensagens. Mensagens de outras regiões também não chegariam à região afetada. Caso o servidor central envie mensagens para este servidor regional, tal não é possível, pois este servidor foi desconectado. Esta solução tem um inconveniente. O servidor central tem guardado informação de servidores regionais que podem já não estar conectados. O servidor central não tem maneira de identificar se o servidor regional foi desconectado ou se é um problema de comunicação.
+
+Uma maneira possível poderia ser contar o número de chamadas consecutivas que o servidor central faz ao servidor regional e este não responde com sucesso. Poderíamos atribuir um número máximo de chamadas consecutivas falhadas e eliminar a informação deste servidor regional no servidor central após o número de chamadas ultrapassar o limite. O problema com esta solução é que o servidor regional poderia estar novamente disponível após o limite de tentativas, e assim o servidor central iria apagar informação de um servidor regional ativo.\\
+
+Semelhante aos servidores regionais, se um cliente desconectar-se sem informar o servidor regional de que irá desconectar-se, os dados ficam guardados tanto neste como no servidor central. O problema para determinar se o utilizador está ativo ou apenas com problemas de comunicação é o mesmo descrito no parágrafo anterior, portanto a solução é idêntica à utilizada nos servidores regionais.
