--- a/Relatório/Introducao.tex
+++ b/Relatório/Introducao.tex
@@ -1,2 +1,2 @@
 \chapter{Introdução}
-Neste trabalho irá ser desenvolvido um sistema distribuído capaz de trocar mensagens entre utilizadores dentro da mesma região ou entre regiões. Desta forma são precisos vários servidores regionais - um servidor para cada região - e um servidor central. Com esta arquitetura podemos ter cenários em que o servidor central possa falhar e as trocas de mensagens entre regiões não aconteça mas dentro de cada região continue a funcionar. Podemos imaginar outro cenário que seria um servidor regional a falhar. Neste caso só a região desse servidor é que não conseguiria trocar mensagens. Mensagens de outras regiões também não chegariam à região afetada.
+Neste trabalho irá ser desenvolvido um sistema distribuído capaz de trocar mensagens entre utilizadores dentro da mesma região ou entre regiões. Desta forma são precisos vários servidores regionais - um servidor para cada região - e um servidor central.
