--- a/Relatório/Requisitos.tex
+++ b/Relatório/Requisitos.tex
@@ -1,5 +1,22 @@
 \chapter{Requisitos}
-
+Neste capitulo é descrito os requisitos funcionais do sistema, assim como os não funcionais.
 \section{Funcionais}
-
+Os requisitos funcionais deste sistema são os seguintes apresentados:
+\begin{itemize}
+	\item Evitar sobrecarga no servidor central;
+	\item O cliente comunica apenas com o servidor da sua região;
+	\item O cliente tem um identificador único;
+	\item O cliente conhece todos os servidores regionais;
+	\item O cliente regista-se num servidor regional;
+	\item O cliente pode enviar mensagens para um único cliente ou para um grupo onde este pertença;
+	\item O cliente pode mudar de região;
+	\item O cliente pode criar grupos;
+	\item O grupo pode ter clientes pertencentes a várias regiões;
+	\item Os servidores regionais e centrais devem conhecer a estrutura dos grupos;
+	\item Os clientes que não estejam conectados não recebem as mensagens.
+\end{itemize}
 \section{Não Funcionais}
+Os requisitos não funcionais deste sistema são os seguintes apresentados:
+\begin{itemize}
+	\item 
+\end{itemize}
