--- a/Relatório/Requisitos.tex
+++ b/Relatório/Requisitos.tex
@@ -18,5 +18,6 @@ Os requisitos funcionais deste sistema são os seguintes apresentados:
 \section{Não Funcionais}
 Os requisitos não funcionais deste sistema são os seguintes apresentados:
 \begin{itemize}
-	\item 
+	\item A aplicação cliente realizada em WinForm;
+	\item Transparência à concorrência no acesso dos servidores.
 \end{itemize}
