adds more report

--- a/Relatório/Relatorio.tex
+++ b/Relatório/Relatorio.tex
@@ -41,6 +41,8 @@
 \end{center}
 Com o intuito de realizar o 1º trabalho prático da unidade curricular Sistemas Distribuídos pretende-se implementar um sistema distribuído para suportar a troca de mensagens textuais e instantâneas entre pessoas ou grupos num cenário de uma grande área geográfica dividida por regiões.
 Ao longo deste trabalho iremos aplicar os conceitos aprendidos nas aulas. Iremos descrever e discutir as vantagens, os problemas e os desafios que se colocam no desenvolvimento deste sistema distribuído.
+
+	\tableofcontents	
 	
 	\include{Introducao}
 	
