--- a/Relatório/Introducao.tex
+++ b/Relatório/Introducao.tex
@@ -1,2 +1,4 @@
 \chapter{Introdução}
-Neste trabalho irá ser desenvolvido um sistema distribuído capaz de trocar mensagens entre utilizadores dentro da mesma região ou entre regiões. Desta forma são precisos vários servidores regionais - um servidor para cada região - e um servidor central.
+Com o intuito de realizar o 1º trabalho prático da unidade curricular Sistemas Distribuídos pretende-se implementar um sistema distribuído usando objetos distribuídos da plataforma .NET. Este sistema terá de ser capaz de trocar mensagens textuais e instantâneas entre utilizadores dentro da mesma região ou entre regiões. Será possível também formar grupos e trocar mensagens entre estes.\\
+
+Ao longo deste trabalho iremos aplicar os conceitos aprendidos nas aulas. Iremos descrever e discutir as vantagens, os problemas e os desafios que se colocam no desenvolvimento deste sistema distribuído.
