--- a/Relatório/Requisitos.tex
+++ b/Relatório/Requisitos.tex
@@ -19,5 +19,8 @@ Os requisitos funcionais deste sistema são os seguintes apresentados:
 Os requisitos não funcionais deste sistema são os seguintes apresentados:
 \begin{itemize}
 	\item A aplicação cliente realizada em WinForm;
-	\item Transparência à concorrência no acesso dos servidores.
+	\item Ter um sistema escalável;
+	\item Transparência à concorrência no acesso dos servidores;
+	\item Suportar vários canais de comunicação (e.g.: HTTP, TCP);
+	\item Tratar as falhas de forma a que o sistema continue funcional, mesmo com a existência de erros em um dos componentes.
 \end{itemize}
