--- a/Relatório/Descricao.tex
+++ b/Relatório/Descricao.tex
@@ -1,3 +1,3 @@
 \chapter{Descrição do Problema}
 
-O problema consiste em desenvolver um sistema distribuído capaz de trocar mensagens instantâneas, ou seja, sem haver o armazenamento das mesmas, entre utilizadores dentro da mesma região ou entre regiões. É necessário evitar sobrecarga nos servidores. É também necessário garantir que os vários acessos simultâneos aos servidores que mantenham a consistência dos dados. O sistema desenvolvido deve ter em conta tolerância a falhas.
+O problema consiste em desenvolver um sistema distribuído capaz de trocar mensagens instantâneas, ou seja, sem haver o armazenamento das mesmas, entre utilizadores dentro da mesma região ou entre regiões. Há também a possibilidade de criar e remover grupos contendo utilizadores da mesma ou diferentes regiões. A troca de mensagens deve ser possível entre grupos. É também necessário garantir que os vários acessos simultâneos aos servidores mantenham a consistência dos dados. O sistema desenvolvido deve ter em conta tolerância a falhas, assim como a sua escalabilidade.
