adds architecture image

--- a/3º Trabalho/Relatório/Arquitetura.tex
+++ b/3º Trabalho/Relatório/Arquitetura.tex
@@ -5,8 +5,9 @@ Um utilizador apenas interage com um \textit{broker}. O \textit{broker} comunica
 
 \begin{figure}[h]
 	\makebox[\textwidth][c]{
-		\includegraphics[width=1.3\textwidth]{./figures/userform}
+		\includegraphics[width=0.8\textwidth]{./figures/architecture.pdf}
 	}
+	\caption{Arquitetura}
 \end{figure}
 
 O utilizador é cliente do \textit{broker}. O \textit{broker} é serviço do utilizador e cliente do servidor de armazenamento. O servidor de armazenamento é serviço do \textit{broker}.
