--- a/3º Trabalho/Relatório/Utilizacao.tex
+++ b/3º Trabalho/Relatório/Utilizacao.tex
@@ -6,7 +6,7 @@ Para usar o sistema desenvolvido, terá de executar os seguintes passos dentro d
 	\item Dentro da pasta Storages existem três pastas. Em cada uma delas deverá lançar o executável \textit{KVStorage.exe};
 	\item Dentro da pasta Brokers, existem duas pastas. Em cada uma delas, deverá lançar o executável \textit{Broker.exe};
 	\item Para executar um ou mais clientes em .NET, deverá lançar o executável \textit{UserApp.exe} presente na pasta UserApps na sub-pasta dotNet;
-	\item Para executar um ou mais clientes em Java, deverá ter instalado o Java e deverá lançar o .jar \textit{AppUser.jar} na linha de comandos com o comando "" presente na pasta UserApps na sub-paste java.
+	\item Para executar um ou mais clientes em Java, deverá ter instalado o Java e deverá lançar o .jar \textit{JavaClient.jar} presente na pasta UserApps na sub-paste java.
 \end{enumerate}
 
 \section{Utilização do Cliente}
